# something

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  data1.txt
include/: sensor.h
something/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
something/src/: Makefile  cmake_install.cmake  run
src/: CMakeLists.txt  Makefile  cmake_install.cmake  hellotest.cpp  run  sensor.cpp  sensorTest.cpp
